gitops/gateway/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller

  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: public-envoy-config
    namespace: envoy-gateway-system
